--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "short_name": "test",
-  "name": "test",
+  "name": "Lunch Tyme",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#34B379",
   "background_color": "#ffffff"
 }
